# ez-iterator

./: CMakeLists.txt  README.md  preconfig.cmake
include/ez/: iterator.hpp
include/ez/iterator/: adapt.hpp  enumerate.hpp  range.hpp
include/ez/iterator/intern/: dynamic_range.hpp  helpers.hpp  static_range.hpp
test/: CMakeLists.txt  adapt.cpp  basic.cpp  enumerations.cpp  helpers.hpp  main.cpp  ranges.cpp
